--- a/events.html
+++ b/events.html
@@ -8,7 +8,7 @@
         <header> 
             <img src="img/logo.png">
             <ul class="menu">
-                <li><a href="temp.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Events</a></li>
             </ul>
         </header>
@@ -32,7 +32,7 @@
                         eligendi blanditiis eius eos iure repellendus rem error sequi dolores 
                         corporis sunt vitae animi.
                     </p>
-                    <a href="Form.html">Register Now</a>
+                    <a href="#">Register Now</a>
                 </div>
             </div>
             <div class="drpdn">
@@ -51,7 +51,7 @@
                         eligendi blanditiis eius eos iure repellendus rem error sequi dolores 
                         corporis sunt vitae animi.
                     </p>
-                    <a href="Form.html">Register Now</a>
+                    <a href="#">Register Now</a>
                 </div>
             </div>
         </section>
