--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 	</section>
 	<section>
 		<div class="aboutgrid">
-			<div>
+			<div class="content-1">
 				<img src="img/about us.png">
 			</div>
 			
-			<div class="info">
+			<div class="info content-2">
 				<h1>about us</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -34,7 +34,7 @@
 				proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
 			</div>
-			<div class="info">
+			<div class="info content-3">
 				<h1>about community</h1>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -44,16 +44,18 @@
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 				</p>
 			</div>
-			<div">
+			<div class="content-4">
 				<img src="img/community.jpg">
 			</div>	
 		</div>
 	</section>
 	<section class="events">
 		<div class="img2">
-			<img src="img/Events.png">
+			<div class="img-21">
+				<img src="img/Events.png">
+			</div>
 		</div>
-		<div class="flex">
+		<div class="grid">
 			<div class="img1">
 				<a href="events.html"><img src="img/poster1.jpeg"></a>
 			</div>
