--- a/index.html
+++ b/index.html
@@ -66,11 +66,57 @@
 		
 	</section>
 	<footer>
-		<ul>
-			<li>95004xxxxx</li>
-			<li>contact@gamersgarage.co.in</li>
-		</ul>
-		<img src="img/logo.png">
+		<footer>
+			<div>
+				<div>
+					<img src="./images/Logo_blue with text.png" alt="Aekam Logo">
+				</div>
+				<div>
+					<h4>Support</h4>
+					<ul>
+						<li>Help Center</li>
+						<li>Community Guidlines</li>
+						<li>Privacy Policy</li>
+						<li>FAQs</li>
+					</ul>
+				</div>
+				<div>
+					<h4>Company</h4>
+					<ul>
+						<li>About us</li>
+						<li>Blog</li>
+						<li>Career</li>	
+						<li>Contact us</li>
+					</ul>
+				</div>
+				<div>
+					<h4>Say Hi!</h4>
+					<form action="#">
+						<input>
+						<br>
+						<input type="text" placeholder="email">
+						<br>
+					</form>
+				</div>
+				<div>
+					<p>&copy 2021 Aekam Labs. All rights reserved</p>
+				</div>
+				<div0>
+					<div>
+						<img src="./images/instagram.png" alt="">
+					</div>
+					<div>
+						<img src="./images/twitter.png" alt="">
+					</div>
+					<div>
+						<img src="./images/linkedin.png" alt="">
+					</div>
+					<div>
+						<img src="./images/youtube.png" alt="">
+					</div>
+				</div>
+			</div>
+		</footer>
 	</footer>
 	
 </body>
